--- a/templates/admin.twig
+++ b/templates/admin.twig
@@ -2,66 +2,32 @@
 
 {% block content %}
 	{% include "flash_messages_admin.twig" %}
+	<h2 class="font-semibold">{{ page.glob.l10n.admin_short }}</h2>
 	<ul class="w-full">
-		<li class="bg-manatee-200 rounded border-1 m-2 p-2 flex items-center justify-between">
-			<a href="{{page.rot}}/admin/configuration/">
+		<li class="bg-btn2 dark:bg-btn2d rounded border-1 m-2 p-2">
+			<a href="{{page.rot}}/admin/configuration/" class="w-full">
 				<h2>{{page.glob.l10n.admin}}</h2>
 			</a>
-			<div class="ml-4 flex items-end">
-				<a class="top-link" href="#" title="{{ page.glob.l10n.admin_users_delete }}">
-					<svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z" />
-					</svg>
-				</a>
-			</div>
 		</li>
-		<li class="bg-manatee-200 rounded border-1 m-2 p-2 flex items-center justify-between">
-			<a href="{{page.rot}}/admin/users/">
+		<li class="bg-btn2 dark:bg-btn2d rounded border-1 m-2 p-2">
+			<a href="{{page.rot}}/admin/users/" class="w-full">
 				<h2>{{page.glob.l10n.admin_users}}</h2>
 			</a>
-			<div class="ml-4 flex items-end">
-				<a class="top-link" href="#" title="{{ page.glob.l10n.admin_users_delete }}">
-					<svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z" />
-					</svg>
-				</a>
-			</div>
 		</li>
-		<li class="bg-manatee-200 rounded border-1 m-2 p-2 flex items-center justify-between">
-			<a href="{{page.rot}}/admin/idtemplates/">
+		<li class="bg-btn2 dark:bg-btn2d rounded border-1 m-2 p-2">
+			<a href="{{page.rot}}/admin/idtemplates/" class="w-full">
 				<h2>{{page.glob.l10n.admin_idtemplates}}</h2>
 			</a>
-			<div class="ml-4 flex items-end">
-				<a class="top-link" href="#" title="{{ page.glob.l10n.admin_users_delete }}">
-					<svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z" />
-					</svg>
-				</a>
-			</div>
 		</li>
-		<li class="bg-manatee-200 rounded border-1 m-2 p-2 flex items-center justify-between">
-			<a href="{{page.rot}}/admin/mail/">
+		<li class="bg-btn2 dark:bg-btn2d rounded border-1 m-2 p-2">
+			<a href="{{page.rot}}/admin/mail/" class="w-full">
 				<h2>{{page.glob.l10n.admin_mail}}</h2>
 			</a>
-			<div class="ml-4 flex items-end">
-				<a class="top-link" href="#" title="{{ page.glob.l10n.admin_users_delete }}">
-					<svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z" />
-					</svg>
-				</a>
-			</div>
 		</li>
-		<li class="bg-manatee-200 rounded border-1 m-2 p-2 flex items-center justify-between">
-			<a href="{{page.rot}}/admin/version/">
+		<li class="bg-btn2 dark:bg-btn2d rounded border-1 m-2 p-2">
+			<a href="{{page.rot}}/admin/version/" class="w-full">
 				<h2>{{page.glob.l10n.admin_check_version}}</h2>
 			</a>
-			<div class="ml-4 flex items-end">
-				<a class="top-link" href="#" title="{{ page.glob.l10n.admin_users_delete }}">
-					<svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-						<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 9l3 3m0 0l-3 3m3-3H8m13 0a9 9 0 11-18 0 9 9 0 0118 0z" />
-					</svg>
-				</a>
-			</div>
 		</li>
 	</ul>
 {% endblock %}
