--- a/templates/admin_users.twig
+++ b/templates/admin_users.twig
@@ -2,16 +2,17 @@
 
 {% block content %}
 
-    {% include "flash_messages_admin.twig" %}
+    {% include "flash_messages.twig" %}
 
-    <h2>{{ page.glob.l10n.admin_users_legend1 }}</h2>
+    <h2 class="font-semibold">{{ page.glob.l10n.admin_users_legend1 }}</h2>
     <form action="{{ page.rot }}/admin/users/" method="post" id="newuserform">
-        <fieldset class="config-fieldset-small">
+        <input type="text" class="hidden" name="function" value="createuser">
+        <fieldset class="config-fieldset">
             <label for="newuser_name">{{ page.glob.l10n.admin_username }}</label>
             <input name="newuser_name" id="newuser_name" type="text"
                    value="" placeholder="{{ page.glob.l10n.admin_username }}"/>
         </fieldset>
-        <fieldset class="config-fieldset-small">
+        <fieldset class="config-fieldset">
             <label for="newuser_password">{{ page.glob.l10n.admin_userpw }}</label>
             <input name="newuser_password" id="newuser_password" type="password"
                    value="" placeholder="{{ page.glob.l10n.admin_userpw }}"/>
@@ -21,29 +22,113 @@
         </button>
     </form>
 
-    <h2>{{ page.glob.l10n.admin_users_legend2 }}</h2>
-    <ul id="users" class="w-full">
-        {% for user in users %}
-            <li class="bg-manatee-200 rounded border m-2 p-2 flex items-center justify-between">
-                <a href="{{ page.rot }}/admin/users/{{ user.id }}/" class="text-left">
-                    <h2>{{ user.username }}</h2>
-                </a>
-                <div class="ml-4 flex items-end">
-                    <a class="top-link" href="{{ page.rot }}/admin/users/{{ user.id }}/" title="{{ page.glob.l10n.admin_users_edit }}">
-                        <span class="sr-only">{{ page.glob.l10n.admin_users_edit }}</span>
-                        <svg class="w-6 h-6 align-middle" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
-                        </svg>
+    <div x-data="adminUserDelete()">
+        <h2 class="font-semibold mt-4">{{ page.glob.l10n.admin_users_legend2 }}</h2>
+        <ul id="users" class="w-full">
+            {% for user in users %}
+                <li class="bg-manatee-200 rounded border m-2 p-2 flex items-center justify-between">
+                    <a href="{{ page.rot }}/admin/users/{{ user.id }}/" class="text-left">
+                        <h2>{{ user.username }}</h2>
                     </a>
-                    <a class="top-link" href="#" title="{{ page.glob.l10n.admin_users_delete }}">
-                        <span class="sr-only">{{ page.glob.l10n.admin_users_delete }}</span>
-                        <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
-                        </svg>
-                    </a>
-                </div>
-            </li>
-        {% endfor %}
-    </ul>
+                    <div class="ml-4 flex items-end">
+                        <a class="top-link" href="{{ page.rot }}/admin/users/{{ user.id }}/" title="{{ page.glob.l10n.admin_users_edit }}">
+                            <span class="sr-only">{{ page.glob.l10n.admin_users_edit }}</span>
+                            <svg class="w-6 h-6 align-middle" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z" />
+                            </svg>
+                        </a>
+                        <button class="top-link"
+                                title="{{ page.glob.l10n.admin_users_delete }}"
+                                @click="open({{ user.id }})"
+                        >
+                            <span class="sr-only">{{ page.glob.l10n.admin_users_delete }}</span>
+                            <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z" />
+                            </svg>
+                        </button>
+                    </div>
+                </li>
+            {% endfor %}
+        </ul>
+        <script type="application/javascript">
+            function adminUserDelete() {
+                return {
+                    show: false,
+                    userId: -1,
+                    open(userId) { this.show = true; this.userId = userId },
+                    close() { this.show = false },
+                    isOpen() { return this.show === true },
+                    getUserId() { return this.userId },
+                }
+            }
+        </script>
 
+        {# delete dialog #}
+        <div class="fixed z-10 inset-0 overflow-y-auto"
+             x-show="isOpen()"
+             @click.away="close()"
+        >
+            <div class="flex items-end justify-center min-h-screen pt-4 px-4 pb-20 text-center sm:block sm:p-0">
+                <div class="fixed inset-0 transition-opacity"
+                     aria-hidden="true"
+                     x-transition:enter="ease-out duration-300"
+                     x-transition:enter-start="opacity-0"
+                     x-transition:enter-end="opacity-100"
+                     x-transition:leave="ease-in duration-200"
+                     x-transition:leave-start="opacity-100"
+                     x-transition:leave-end="opacity-0"
+                >
+                    <div class="absolute inset-0 bg-gray-500 opacity-75"></div>
+                </div>
+                <span class="hidden sm:inline-block sm:align-middle sm:h-screen" aria-hidden="true">&#8203;</span>
+                <div class="inline-block align-bottom bg-white rounded-lg px-4 pt-5 pb-4 text-left overflow-hidden shadow-xl transform transition-all sm:my-8 sm:align-middle sm:max-w-lg sm:w-full sm:p-6"
+                     role="dialog"
+                     aria-modal="true"
+                     aria-labelledby="{{ page.glob.l10n.admin_users_delete }}"
+                     x-transition:enter="ease-out duration-300"
+                     x-transition:enter-start="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+                     x-transition:enter-end="opacity-100 translate-y-0 sm:scale-100"
+                     x-transition:leave="ease-in duration-200"
+                     x-transition:leave-start="opacity-100 translate-y-0 sm:scale-100"
+                     x-transition:leave-end="opacity-0 translate-y-4 sm:translate-y-0 sm:scale-95"
+                >
+                    <form action="{{ page.rot }}/admin/users/" method="post" id="deluserform">
+                        <input type="text" class="hidden" name="function" value="deleteuser">
+                        <input type="number" class="hidden" name="userid" x-bind:value="getUserId()">
+                        <div class="sm:flex sm:items-start">
+                            <div class="mx-auto flex-shrink-0 flex items-center justify-center h-12 w-12 rounded-full bg-red-100 sm:mx-0 sm:h-10 sm:w-10">
+                                <!-- Heroicon name: exclamation -->
+                                <svg class="h-6 w-6 text-red-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z" />
+                                </svg>
+                            </div>
+                            <div class="mt-3 text-center sm:mt-0 sm:ml-4 sm:text-left">
+                                <h3 class="text-lg leading-6 font-medium text-gray-900" id="modal-headline">
+                                    {{ page.glob.l10n.admin_users_delete }}
+                                </h3>
+                                <div class="mt-2">
+                                    <p class="text-sm text-gray-500">
+                                        Are you sure you want to delete this user? This action cannot be undone.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mt-5 sm:mt-4 sm:flex sm:flex-row-reverse">
+                            <button type="submit"
+                                    class="w-full inline-flex justify-center rounded-md border border-transparent shadow-sm px-4 py-2 bg-red-600 text-base font-medium text-white hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 sm:ml-3 sm:w-auto sm:text-sm"
+                            >
+                                {{ page.glob.l10n.admin_users_delete }}
+                            </button>
+                            <button type="button"
+                                    class="mt-3 w-full inline-flex justify-center rounded-md border border-gray-300 shadow-sm px-4 py-2 bg-white text-base font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 sm:mt-0 sm:w-auto sm:text-sm"
+                                    @click="close"
+                            >
+                                {{ page.glob.l10n.cancel }}
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
