--- a/templates/header.twig
+++ b/templates/header.twig
@@ -19,13 +19,15 @@
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
             </svg>
         </a>
-        <a href="{{ page.rot }}/admin/" class="top-link" title="{{ page.glob.l10n.admin_short }}">
-            <span class="sr-only">{{ page.glob.l10n.admin_short }}</span>
-            {# Heroicon name: adjustments #}
-            <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4" />
-            </svg>
-        </a>
+        {% if page.admin %}
+            <a href="{{ page.rot }}/admin/" class="top-link" title="{{ page.glob.l10n.admin_short }}">
+                <span class="sr-only">{{ page.glob.l10n.admin_short }}</span>
+                {# Heroicon name: adjustments #}
+                <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4" />
+                </svg>
+            </a>
+        {% endif %}
         <a href="{{ page.rot }}/logout/" class="top-link" title="{{ page.glob.l10n.logout }}">
             <span class="sr-only">{{ page.glob.l10n.logout }}</span>
             {# Heroicon name: logout #}
