--- a/templates/main.html
+++ b/templates/main.html
@@ -26,6 +26,7 @@
     <link rel="icon" href="{{page.rot}}/favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="{{page.rot}}/bbs-icon.png">
     <script src="{{page.rot}}/js/libs/modernizr-2.6.2-custom.min.js"></script>
+	<script src="{{page.rot}}/js/libs/cssua.min.js"></script>
 </head>
 <body>
 <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a
