--- a/templates/main.html
+++ b/templates/main.html
@@ -33,7 +33,7 @@
     different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a>
     to experience this site.</p><![endif]-->
 
-<div data-role="page" data-title="{{ page.title }}" {% block pid %}{% endblock %}>
+<div data-role="page" data-title="{% if subsubtitle %}{{subsubtitle}} - {% endif %}{{ page.title }}" {% block pid %}{% endblock %}>
 
     <div data-role="header" data-position="fixed">
         {% block leftpanel %}{% endblock %}
