Book entry and details views improvements

--- a/templates/series_detail.html
+++ b/templates/series_detail.html
@@ -2,6 +2,7 @@
 
 
 {% block content %}
+{% set series_detail_view = true %}
 <section class="series_detail row">
 	<header>
 		<h1>{{page.glob.l10n.booksbyseries}} "{{ series.name }}":</h1>
