--- a/templates/title_detail.html
+++ b/templates/title_detail.html
@@ -7,10 +7,41 @@
 	<header>
 			<h1>{{ book.title }}</h1> 												
 			<p>					
-				{{ book.pubdate | date("Y") }}{% if language %}, {% endif %}{{ language }}
+				{{ book.pubdate | date("Y") }}	{{ language }}
 			</p>
 			<p class="ui-state-error">{{ flash.error }}</p>	
 	</header>		
+	<div data-role="collapsible">
+		<h2>{{page.glob.l10n.download}}</h2>
+		{% if protect_dl == true %} 
+		<div class="dl_access">
+			<p>
+				{{ page.glob.l10n.check_access_info }}
+			</p>
+			<a data-role="button" data-rel="dialog" href="{{page.rot}}/titles/{{book.id}}/showaccess/">
+				{{ page.glob.l10n.check_access }}
+			</a>
+		</div>
+		{% endif %}	
+		<div class ="dl_download" {% if protect_dl == true %} hidden="true" {% endif %}>
+			<p>
+				{{ page.glob.l10n.presskey }}
+			</p>
+			<div data-role="controlgroup" data-type="horizontal" class="downButtons">
+				{% for format in formats %}				
+						<a data-role="button" 
+							{% if page.glob.glob_dl_toggle == true %} disabled="true" {% endif %} 
+							data-ajax="false" 
+							href="{{page.rot}}/titles/{{book.id}}/file/{{format.name|url_encode()}}.{{format.format|lower}}">
+								{{ format.format }} | {{format.uncompressed_size|hfsize}}
+						</a>
+				{% endfor %}
+				{% if kindle_format %}
+					<input id="kindleButton" type="button" data-inline="true" data-icon="forward" value="{{page.glob.l10n.send_to_kindle}}" />
+				{% endif %}
+			</div>
+		</div>
+	</div>
 	{% if kindle_format %}
 	    <div data-role="popup" id="kindlePopup" data-overlay-theme="a" data-theme="c" style="max-width:450px;" class="ui-corner-all" data-transition="pop" data-dismissible="false">
 	      <div data-role="header" data-theme="a" class="ui-corner-top">
@@ -35,66 +66,29 @@
 	{% endif %}
 	<aside class="title_detail_image">
 		{% if book.has_cover %}		
-		<a href="{{page.rot}}/titles/{{ book.id }}/cover/">
 		<img src="{{page.rot}}/titles/{{ book.id }}/cover/" />
-		</a>
 		{% endif %}		
 	</aside>
-	<div align="center" data-role="">
-		{% if protect_dl == true %} 
-		<div class="dl_access">
-			<p>
-				{{ page.glob.l10n.check_access_info }}
-			</p>
-			<a data-role="button" data-rel="dialog" href="{{page.rot}}/titles/{{book.id}}/showaccess/">
-				{{ page.glob.l10n.check_access }}
-			</a>
-		</div>
-		{% endif %}	
-		<section class="title_details">
-		<div class ="dl_download" {% if protect_dl == true %} hidden="true" {% endif %}>
-			<div data-role="controlgroup" data-type="horizontal" class="downButtons">
-				{% for format in formats %}				
-						<a data-role="button" 
-							{% if page.glob.glob_dl_toggle == true %} disabled="true" {% endif %} 
-							data-ajax="false" 
-							href="{{page.rot}}/titles/{{book.id}}/file/{{format.name|url_encode()}}.{{format.format|lower}}">
-								{{ format.format }}						</a>
-				{% endfor %}
-				{% if kindle_format %}
-					<input id="kindleButton" type="button" data-inline="true" data-icon="mail" value="{{page.glob.l10n.send_to_kindle}}" />
-				{% endif %}
-				{% if read_format %}
-					<a data-role="button"
-						{% if page.glob.glob_dl_toggle == true %} disabled="true" {% endif %}
-						data-icon="eye"
-						data-ajax="false"
-						target="_blank"
-						href="/reader/?bookPath={{page.host}}{{page.rot}}/titles/{{book.id}}/file/{{formats[0].name|url_encode()}}.{{read_format|lower}}">
-							Read</a>
-				{% endif %}
-			</div>
-		</div>
-	</div>
-		<div id="authors" data-role="" data-collapsed="false">
-				<h2 style="display: none;">{{page.glob.l10n.authors}}</h2>
+	<section class="title_details">
+		<div id="authors" data-role="collapsible" data-collapsed="false">
+				<h2>{{page.glob.l10n.authors}}</h2>
 				{% for author in authors %}
-				<a data-role="button" data-icon="user" href="{{page.rot}}/authors/{{author.id}}/0/">{{ author.name }}</a>
+				<a data-role="button" data-icon="info" href="{{page.rot}}/authors/{{author.id}}/0/">{{ author.name }}</a>
 				{% endfor %} 
 		</div>
 		{% if series != NULL %}
-		<div id="series" data-role="">
-				<h2 style="display: none;">{{page.glob.l10n.series}}</h2>
+		<div id="series" data-role="collapsible">
+				<h2>{{page.glob.l10n.series}}</h2>
 				{% for this_series in series %}
-				<a data-role="button" data-icon="bullets" href="{{page.rot}}/series/{{this_series.id}}/0/">{{ this_series.name }} ({{book.series_index | round(1) }})</a>
+				<a data-role="button" data-icon="info" href="{{page.rot}}/series/{{this_series.id}}/0/">{{ this_series.name }} ({{book.series_index}})</a>
 				{% endfor %} 
 		</div>		
 		{% endif %}
-		<div id="tags" data-role="" align="right">
-			<h2 style="display: none;">{{page.glob.l10n.tags}}</h2>			
-			<p align="right">
+		<div id="tags" data-role="collapsible">
+			<h2>{{page.glob.l10n.tags}}</h2>			
+			<p>
 				{% for tag in tags %}
-				<a data-role="button" data-icon="tag" data-mini="true" data-inline="true" href="{{page.rot}}/tags/{{tag.id}}/0/">{{ tag.name }}</a>
+				<a data-role="button" data-mini="true" data-inline="true" href="{{page.rot}}/tags/{{tag.id}}/0/">{{ tag.name }}</a>
 				{% endfor %}
 			</p>
 		</div>
