--- a/templates/title_entry.html
+++ b/templates/title_entry.html
@@ -7,11 +7,9 @@
 		{% endif %}
 		
 		<h3>
-			{{ book.title }}
-			{% if book.series %}
-				({% if not series_detail_view %}{{book.series.name}}, {% endif %}#{{book.series_index | round(1) }})
-			{% endif %}
+			{% if series %}{{book.series_index}} - {% endif %}
+			{{ book.sort }} ({{ book.pubdate|date("Y") }})
 		</h3>
-		<p>{{book.author_sort}}, {{book.pubdate|date("Y")}} {{book.addInfo}}</p>
+		<p>{{book.author_sort}} {{book.addInfo}}</p>
 	</a>
 </li>
